<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:paddingRight="@dimen/_10sdp"
            android:scaleType="fitStart"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/selector_yellow"
                android:gravity="center"
                android:text="@string/feedback"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>


    </LinearLayout>


    <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        ext:documentView_text="@string/about"
        ext:documentView_textAlignment="justified"
        ext:documentView_textFormat="plain"
        ext:documentView_textSize="@dimen/_10sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.3">

        <TextView
            android:id="@+id/visitSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="@string/visitSite"
            android:textColor="@color/green"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_mode"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_14sdp" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/examSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:kswThumbWidth="@dimen/_18sdp"
                app:kswThumbHeight="@dimen/_18sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                app:kswTintColor="@color/green"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>